--- a/src/app/components/designation/designation.component.html
+++ b/src/app/components/designation/designation.component.html
@@ -1,1 +1,16 @@
-<p>designation works!</p>
+
+
+
+<div class="row">
+    @for(item of designationList; track $index){
+        <div class="col-3">
+            <div class="card">
+                <div class="card-body">
+                <h4 class="card-title">{{item.designation}}</h4>
+                <a href="#" class="card-link">Card link</a>
+                <a href="#" class="card-link">Another link</a>
+                </div>
+            </div>
+        </div>
+    }
+</div>
