routing -> route, router outlet

--- a/src/app/master/master.component.html
+++ b/src/app/master/master.component.html
@@ -11,7 +11,7 @@
     </div>
 </div>
 
-<div class="row">
+<div class="row pt-2">
     <div class="col-12 text-center" *ngIf="tabSelected == 'Roles'">
         <app-roles></app-roles>
     </div>
